# yumi-licenseguard

./: .gitignore  .npmignore  INTEGRATION.md  README.md  design-mockup.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
src/: env.d.ts  index.tsx  theme.ts  types.ts
src/components/: HubNotification.tsx  MeshBackground.tsx  SyncWarning.tsx  UpdateCheckButton.tsx
src/hooks/: useLicense.ts  useUpdater.ts
src/screens/: ActivationScreen.tsx  BannedScreen.tsx  ClockFraudScreen.tsx  ExpiredScreen.tsx  LoadingScreen.tsx  SyncRequiredScreen.tsx
src/styles/: components.css  index.css  tokens.css
tauri/: Cargo.toml
tauri/src/: lib.rs
